# nix-upload

./: .gitignore  README.md  config - Copy.json  nix-upload.py  pyproject.toml  requirements.in  requirements.txt  sample_config.json
